testsuite/tests/typecheck/should_fail/tcfail032.stderr

tcfail032.hs:14:8: error:
    • Couldn't match expected type ‘a1 -> Int’ with actual type ‘t’
      ‘t’ is a rigid type variable bound by
        the inferred type of f :: Eq a => t -> a -> Int
        at tcfail032.hs:14:1-31
    • In the expression: x :: (Eq a) => a -> Int
      In an equation for ‘f’: f x = (x :: (Eq a) => a -> Int)
    • Relevant bindings include
        x :: t (bound at tcfail032.hs:14:3)
        f :: t -> a -> Int (bound at tcfail032.hs:14:1)
